--- a/source/schedule.html.erb
+++ b/source/schedule.html.erb
@@ -13,7 +13,7 @@ description: "Situated in the beautiful British city of Bath, Bath Ruby is a con
 
       <li>
         <div class="info">
-          <p class="time">08:30 - 09:30</p>
+          <p class="time">08:30 - 09:30 <span class="duration">1 hr</span></p>
         </div>
         <div class="detail">
           <p class="title">Registration</p>
@@ -22,21 +22,229 @@ description: "Situated in the beautiful British city of Bath, Bath Ruby is a con
 
       <li>
         <div class="info">
-          <p class="time">09:30 - 18:00</p>
+          <p class="time">09:30 - 09:40 <span class="duration">10 mins</span></p>
         </div>
         <div class="detail">
-          <p class="title">A full day of talks</p>
-          <p>Full schedule to be confirmed</p>
+          <p class="title">Welcome</p>
+        </div>
+      </li>
+
+
+      <li class="talk">
+        <div class="info">
+          <p class="time">09:40 - 10:10 <span class="duration">30 mins</span></p>
+          <%= image_tag 'speakers/xavier-riley.jpg', :class=> "speaker-image", :alt => "Xavier Riley" %>
+          <%= link_to "@xavriley", 'https://twitter.com/xavriley', :class => "twitter" %>
+        </div>
+        <div class="detail">
+          <p class="title">Rocking out in Ruby - a playful introduction to Sonic Pi</p>
+          <p class="speaker">Xavier Riley</p>
+          <p>
+            Sonic Pi is a Ruby-based, cross platform environment for creating music with code. As well as being a revolutionary educational tool, it also happens to be a kick ass way of creating music.<br />
+            In this talk we'll give you a brief overview of how it all works and show you how anyone age 6+ can be coding beats and basslines in minutes.
+          </p>
+          <p>
+            We'll also examine how live coding, instant feedback and music make us think differently and how they can influence our code. Solving musical challenges in Sonic Pi is a great way to keep your Ruby skills sharp if you don't get to write as much code as you'd like to at work.
+          </p>
+          <p>
+            Finally we'll look to the future, both of music and education. Sonic Pi is already installed on every Raspberry Pi and it's the only default program to use Ruby! Let's think about how we can use tools like Sonic Pi to give children a positive introduction to programming and to music. With over 30,000 active users that journey has already begun.
+          </p>
+        </div>
+      </li>
+
+
+      <li>
+        <div class="info">
+          <p class="time">10:10 - 10:25 <span class="duration">15 mins</span></p>
+        </div>
+        <div class="detail">
+          <p class="title">Break</p>
+        </div>
+      </li>
+
+      <li class="talk">
+        <div class="info">
+          <p class="time">10:25 - 10:55 <span class="duration">30 mins</span></p>
+        </div>
+        <div class="detail">
+          <p class="title">Lightning Talks</p>
         </div>
       </li>
 
       <li>
         <div class="info">
-          <p class="time">18:00 - 21:00</p>
+          <p class="time">10:55 - 11:10 <span class="duration">15 mins</span></p>
+        </div>
+        <div class="detail">
+          <p class="title">Break</p>
+        </div>
+      </li>
+
+      <li class="talk">
+        <div class="info">
+          <p class="time">11:10 - 11:40 <span class="duration">30 mins</span></p>
+          <%= image_tag 'speakers/coraline-ada-ehmke.jpg', :class=> "speaker-image", :alt => "Coraline Ada Ehmke" %>
+          <%= link_to "@CoralineAda", 'http://twitter.com/CoralineAda', :class => "twitter" %>
+        </div>
+        <div class="detail">
+          <p class="title">How Neo4j Saved My Relationship</p>
+          <p class="speaker">Coraline Ada Ehmke</p>
+          <p>
+            Relational databases have come a long way in the past decade, but sometimes complex data models (a map of network infrastructure, or a quantum-entangled network of social relationships) call for a different approach. How can we address these sorts of modeling challenges? This talk will explore practical uses of Neo4J, a graph database designed to solve the problems of connections and relations that are too complex for traditional relational databases. We'll learn about managing and querying highly connected data and explore the power of graph databases in taming our complex data problems.
+          </p>
+        </div>
+      </li>
+
+      <li>
+        <div class="info">
+          <p class="time">11:40 - 11:55 <span class="duration">15 mins</span></p>
+        </div>
+        <div class="detail">
+          <p class="title">Break</p>
+        </div>
+      </li>
+
+      <li class="talk">
+        <div class="info">
+          <p class="time">11:55 - 12:20 <span class="duration">25 mins</span></p>
+        <%= image_tag 'speakers/courteney-ervin.jpg', :class=> "speaker-image", :alt => "Courteney Ervin" %>
+        <%= link_to "@courteneyervin", 'http://twitter.com/courteneyervin', :class => "twitter" %>
+        </div>
+        <div class="detail">
+          <p class="title">Open Source for Your Benefit</p>
+          <p class="speaker">Courteney Ervin</p>
+          <p>
+            "Open Source is good for you," they whisper to you while you drink your coffee. "Just open source it," they say, hovering above your desk. "FOSS &amp; GTD," they scream, smiling broadly and leaning ever more intimately forward with so many, many teeth.
+          </p>
+          <p>
+            Yes, open source is an incredibly important element of the tech ecosystem, and it can be a valuable and meaningful part of your career as a software developer. However, it’s important to do open source with your own personal needs and goals in mind. In this interactive talk, we’ll explore a collaborative, take-charge approach to open source contributions that doesn’t sacrifice your individual flair.
+          </p>
+        </div>
+      </li>
+
+      <li>
+        <div class="info">
+          <p class="time">12:20 - 12:35 <span class="duration">15 mins</span></p>
+        </div>
+        <div class="detail">
+          <p class="title">Break</p>
+        </div>
+      </li>
+
+      <li class="talk">
+        <div class="info">
+          <p class="time">12:35 - 13:05 <span class="duration">30 mins</span></p>
+        </div>
+        <div class="detail">
+          <p class="title">Lightning Talks</p>
+        </div>
+      </li>
+
+      <li>
+        <div class="info">
+          <p class="time">13:05 - 14:30 <span class="duration">1 hour 25 mins</span></p>
+        </div>
+        <div class="detail">
+          <p class="title">Lunch</p>
+        </div>
+      </li>
+
+      <li class="talk">
+        <div class="info">
+          <p class="time">14:30 - 15:05 <span class="duration">35 mins</span></p>
+          <%= image_tag 'speakers/janet-crawford.jpg', :class=> "speaker-image", :alt => "Janet Crawford" %>
+          <%= link_to "@janetcrawford", 'http://twitter.com/janetcrawford', :class => "twitter" %>
+        </div>
+        <div class="detail">
+          <p class="title">The Surprising Neuroscience of Gender Inequality</p>
+          <p class="speaker">Janet Crawford</p>
+          <p>
+            When it comes to the tech industry and gender, intolerance and under-representation are daily news items. Yet despite the glaring ugliness of scandals like Gamergate, the prime culprit in gender inequity is likely not overt sexism. Implicit bias, a normal byproduct of our neural design, leads well-intentioned men and women to reinforce the status quo, while constricting creativity and limiting strategic vision. This talk explores the biological basis of bias and the responsibility we all hold in changing the story.
+          </p>
+        </div>
+      </li>
+
+      <li>
+        <div class="info">
+          <p class="time">15:05 - 15:20 <span class="duration">15 mins</span></p>
+        </div>
+        <div class="detail">
+          <p class="title">Break</p>
+        </div>
+      </li>
+
+      <li class="talk">
+        <div class="info">
+          <p class="time">15:20 - 15:50 <span class="duration">30 mins</span></p>
+          <%= image_tag 'speakers/zach-holman.jpg', :class=> "speaker-image", :alt => "Zach Holman" %>
+          <%= link_to "@holman", 'http://twitter.com/holman', :class => "twitter" %>
+        </div>
+        <div class="detail">
+          <p class="title">I Can Fired and You Can Too!</p>
+          <p class="speaker">Zach Holman</p>
+        </div>
+      </li>
+
+      <li>
+        <div class="info">
+          <p class="time">15:50 - 16:05 <span class="duration">15 mins</span></p>
+        </div>
+        <div class="detail">
+          <p class="title">Break</p>
+        </div>
+      </li>
+
+      <li>
+        <div class="info">
+          <p class="time">16:05 - 16:35 <span class="duration">30 mins</span></p>
+        </div>
+        <div class="detail">
+          <p class="title">Lighting Talks</p>
+        </div>
+      </li>
+
+      <li>
+        <div class="info">
+          <p class="time">16:35 - 16:50<span class="duration">15 mins</span></p>
+        </div>
+        <div class="detail">
+          <p class="title">Break</p>
+        </div>
+      </li>
+
+      <li class="talk">
+        <div class="info">
+          <p class="time">16:50 - 17:35 <span class="duration">35 mins</span></p>
+          <%= image_tag 'speakers/aaron-patterson.jpg', :class=> "speaker-image", :alt => "Aaron Patterson" %>
+          <%= link_to "@tenderlove", 'http://twitter.com/tenderlove', :class => "twitter" %>
+        </div>
+        <div class="detail">
+          <p class="title">How are method calls formed?</p>
+          <p class="speaker">Aaron Patterson</p>
+          <p>
+            In this presentation we're going to study how method calls are executed. We'll go from bytecode created by Ruby's Virtual Machine down to the C code where the methods actually get executed.
+          </p>
+          <p>
+            After we've learned about how Ruby executes methods today, we'll dive in to optimizations we can make on method dispatch including various types of inline method caching. You should leave with a better understanding of Ruby's VM internals as well as ways to analyze and optimize your own code. Also the presentation will have really great transitions in Keynote.
+          </p>
+        </div>
+      </li>
+
+      <li>
+        <div class="info">
+          <p class="time">17:35 - 17:45<span class="duration">10 mins</span></p>
+        </div>
+        <div class="detail">
+          <p class="title">Wrap Up</p>
+        </div>
+      </li>
+
+      <li>
+        <div class="info">
+          <p class="time">17:45 - 20:00<span class="duration">2 hours 15 mins</span></p>
         </div>
         <div class="detail">
           <p class="title">After Party</p>
-          <p>Details coming soon!</p>
         </div>
       </li>
     </ul>
