Add Mailjet to the sponsors

--- a/source/_sponsors.html.erb
+++ b/source/_sponsors.html.erb
@@ -13,6 +13,9 @@
 
     <%= link_to image_tag("sponsors/uswitch.png", width: 300, height: 150, alt: "uSwitch"), "http://www.uswitch.com/vacancies/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
 
+    <h2>After Party Sponsor</h2>
+    <%= link_to image_tag("sponsors/mailjet.png", width: 300, height: 150, alt: "Mailjet"), "https://www.mailjet.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
+
     <h2>Silver Sponsors</h2>
     <%= link_to image_tag("sponsors/pusher.png", width: 300, height: 150, alt: "Pusher"), "https://pusher.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
 
