--- a/source/sponsors.html.erb
+++ b/source/sponsors.html.erb
@@ -32,6 +32,14 @@ description: "Situated in the beautiful British city of Bath, Bath Ruby is a con
       So in a nutshell we're just what you're looking for if you want to develop yourself and make a difference. We seek &amp; attract people who embrace continuous learning. We value talent and commitment to master and push the boundaries of your discipline.</p>
     </div>
 
+    <h2>After Party</h2>
+
+    <div class="media">
+      <%= link_to image_tag("sponsors/mailjet.png", width: 300, height: 150, alt: "Mailjet"), "https://www.mailjet.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
+      <p><strong>Mailjet</strong> Mailjet is a powerful email service provider that ensures maximum insight and deliverability results for marketing and transactional emails. Our analytics tools and intelligent APIs offer the flexibility to create, send and optimize emails for all.<br />
+      Let us handle the heavy lifting of sending so that so you can focus on what matters most: innovating. Mailjet enables you to send transactional emails with peace of mind. We ensure a great deliverability for your emails and an end-to-end tracking. You can send your emails through SMTP relay or API.</p>
+    </div>
+
     <h2>Silver</h2>
 
     <div class="media">
