Rename some classes to outfox adblockers

--- a/source/_sponsors.html.erb
+++ b/source/_sponsors.html.erb
@@ -1,38 +1,38 @@
-<section class="block sponsors">
+<section class="block supporters">
   <div class="wrapper">
     <h1>Sponsors</h1>
 
     <h2>Ruby Sponsor</h2>
-    <%= link_to image_tag("sponsors/sky.jpg", width: 300, height: 150, alt: "Sky"), "http://www.workforsky.com/find-job/technology-and-product-development/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
+    <%= link_to image_tag("supporters/sky.jpg", width: 300, height: 150, alt: "Sky"), "http://www.workforsky.com/find-job/technology-and-product-development/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "company-logo" %>
 
     <h2>Venue Sponsor</h2>
-    <%= link_to image_tag("sponsors/banes.png", width: 300, height: 150, alt: "Bath & North East Somerset Council"), "http://bathnes.gov.uk/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
+    <%= link_to image_tag("supporters/banes.png", width: 300, height: 150, alt: "Bath & North East Somerset Council"), "http://bathnes.gov.uk/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "company-logo" %>
 
     <h2>Gold Sponsors</h2>
-    <%= link_to image_tag("sponsors/bytemark.png", width: 300, height: 150, alt: "Bytemark Hosting"), "https://www.bytemark.co.uk/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
+    <%= link_to image_tag("supporters/bytemark.png", width: 300, height: 150, alt: "Bytemark Hosting"), "https://www.bytemark.co.uk/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "company-logo" %>
 
-    <%= link_to image_tag("sponsors/uswitch.png", width: 300, height: 150, alt: "uSwitch"), "http://www.uswitch.com/vacancies/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
+    <%= link_to image_tag("supporters/uswitch.png", width: 300, height: 150, alt: "uSwitch"), "http://www.uswitch.com/vacancies/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "company-logo" %>
 
     <h2>After Party Sponsor</h2>
-    <%= link_to image_tag("sponsors/mailjet.png", width: 300, height: 150, alt: "Mailjet"), "https://www.mailjet.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
+    <%= link_to image_tag("supporters/mailjet.png", width: 300, height: 150, alt: "Mailjet"), "https://www.mailjet.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "company-logo" %>
 
     <h2>Silver Sponsors</h2>
-    <%= link_to image_tag("sponsors/pusher.png", width: 300, height: 150, alt: "Pusher"), "https://pusher.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
+    <%= link_to image_tag("supporters/pusher.png", width: 300, height: 150, alt: "Pusher"), "https://pusher.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "company-logo" %>
 
-    <%= link_to image_tag("sponsors/alliants.png", width: 300, height: 150, alt: "Alliants"), "http://www.alliants.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
+    <%= link_to image_tag("supporters/alliants.png", width: 300, height: 150, alt: "Alliants"), "http://www.alliants.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "company-logo" %>
 
-    <%= link_to image_tag("sponsors/cookieshq.png", width: 300, height: 150, alt: "CookiesHQ"), "http://cookieshq.co.uk/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
+    <%= link_to image_tag("supporters/cookieshq.png", width: 300, height: 150, alt: "CookiesHQ"), "http://cookieshq.co.uk/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "company-logo" %>
 
-    <%= link_to image_tag("sponsors/bugsnag.png", width: 300, height: 150, alt: "Bugsnag"), "http://bugsnag.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=bathruby2016", :class => "sponsor-logo" %>
+    <%= link_to image_tag("supporters/bugsnag.png", width: 300, height: 150, alt: "Bugsnag"), "http://bugsnag.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=bathruby2016", :class => "company-logo" %>
 
-    <%= link_to image_tag("sponsors/bristol-and-bath.png", width: 300, height: 150, alt: "Bristol & Bath"), "https://www.bristolandbath.co.uk/?utm_source=conference_website&utm_medium=logo&utm_campaign=bathruby2016", :class => "sponsor-logo" %>
+    <%= link_to image_tag("supporters/bristol-and-bath.png", width: 300, height: 150, alt: "Bristol & Bath"), "https://www.bristolandbath.co.uk/?utm_source=conference_website&utm_medium=logo&utm_campaign=bathruby2016", :class => "company-logo" %>
 
-    <%= link_to image_tag("sponsors/freeagent.png", width: 300, height: 150, alt: "FreeAgent"), "http://www.freeagent.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=bathruby2016", :class => "sponsor-logo" %>
+    <%= link_to image_tag("supporters/freeagent.png", width: 300, height: 150, alt: "FreeAgent"), "http://www.freeagent.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=bathruby2016", :class => "company-logo" %>
 
     <h2>Bronze Sponsors</h2>
-    <%= link_to image_tag("sponsors/rawnet.png", width: 300, height: 150, alt: "Rawnet"), "http://www.rawnet.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
+    <%= link_to image_tag("supporters/rawnet.png", width: 300, height: 150, alt: "Rawnet"), "http://www.rawnet.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "company-logo" %>
 
-    <%= link_to image_tag("sponsors/novate.jpg", width: 300, height: 150, alt: "Novate IT"), "http://www.novate-it.co.uk/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
+    <%= link_to image_tag("supporters/novate.jpg", width: 300, height: 150, alt: "Novate IT"), "http://www.novate-it.co.uk/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "company-logo" %>
 
     <div class="cta">
       <%= link_to 'Sponsor Profiles', '/sponsors/index.html', :class => "btn outline alt" %>
