--- a/source/sponsors.html.erb
+++ b/source/sponsors.html.erb
@@ -1,18 +1,18 @@
 ---
-page_classes: "sponsors"
+page_classes: "supporters"
 description: "Situated in the beautiful British city of Bath, Bath Ruby is a conference for Rubyists of all skill levels."
 ---
 
 <div class="main-content">
 
-  <div class="wrapper sponsors">
+  <div class="wrapper supporters">
 
     <h1>Sponsors</h1>
 
     <h2>Ruby</h2>
 
     <div class="media">
-      <%= link_to image_tag("sponsors/sky.jpg", width: 300, height: 150, alt: "Sky"), "http://www.workforsky.com/find-job/technology-and-product-development/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
+      <%= link_to image_tag("supporters/sky.jpg", width: 300, height: 150, alt: "Sky"), "http://www.workforsky.com/find-job/technology-and-product-development/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "company-logo" %>
       <p><strong>Sky</strong> Sky@LeedsDock are building a team that will be able to take on any challenge; we're stepping up our commitment to digital skills and innovation with the creation of a brand new, world-class technology hub in Leeds. Our new tech hub will see the creation of up to 400 highly-skilled jobs and is already partially open. Its focus is on designing and developing our next generation of websites and apps across the product offering. Teams will also work on some of our most popular digital and online platforms within Sky Sports, Sky News, Online Service and Digital Trading.
       <br />
       Based at Allied London's Leeds Dock, in the heart of the city, the hub is already a dynamic and creative environment for our tech teams, expanding their skills in order to continue to grow our technology for customers.</p>
@@ -21,12 +21,12 @@ description: "Situated in the beautiful British city of Bath, Bath Ruby is a con
     <h2>Gold</h2>
 
     <div class="media">
-      <%= link_to image_tag("sponsors/bytemark.png", width: 300, height: 150, alt: "Bytemark Hosting"), "https://www.bytemark.co.uk/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
+      <%= link_to image_tag("supporters/bytemark.png", width: 300, height: 150, alt: "Bytemark Hosting"), "https://www.bytemark.co.uk/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "company-logo" %>
       <p><strong>Bytemark Hosting</strong> Bytemark is the UK's smartest hosting company for builders and self-starters, established in 2002. It has its own data centre in York, another in Manchester, and its own cloud hosting platform called BigV (70,000 lines of Ruby). BigV lets developers scale to servers of up to 180GB of RAM, and to mix in dedicated servers for the most flexible hosting network. Bytemark can also take on active management of applications and clients, including all the fiddly stuff like backups, health monitoring and 24-hour response. Bytemark love Ruby, and are always interested in meeting programmers looking for a new challenge.</p>
     </div>
 
     <div class="media">
-      <%= link_to image_tag("sponsors/uswitch.png", width: 300, height: 150, alt: "uSwitch"), "http://www.uswitch.com/vacancies/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
+      <%= link_to image_tag("supporters/uswitch.png", width: 300, height: 150, alt: "uSwitch"), "http://www.uswitch.com/vacancies/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "company-logo" %>
       <p><strong>uSwitch</strong> Here at uSwitch we empower intelligent people to make intelligent decisions. We give them the autonomy to experiment and the flexibility to develop ways to provide our customers a simple and personal service. We give people problems to solve and the autonomy to implement using appropriate technologies, this is why we like our developers to experiment with coding. We encourage a continuous delivery of value; We don't do 6 month "projects". We prefer to break problems down into manageable chunks and deliver early and often.
       <br />
       So in a nutshell we're just what you're looking for if you want to develop yourself and make a difference. We seek &amp; attract people who embrace continuous learning. We value talent and commitment to master and push the boundaries of your discipline.</p>
@@ -35,7 +35,7 @@ description: "Situated in the beautiful British city of Bath, Bath Ruby is a con
     <h2>After Party</h2>
 
     <div class="media">
-      <%= link_to image_tag("sponsors/mailjet.png", width: 300, height: 150, alt: "Mailjet"), "https://www.mailjet.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
+      <%= link_to image_tag("supporters/mailjet.png", width: 300, height: 150, alt: "Mailjet"), "https://www.mailjet.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "company-logo" %>
       <p><strong>Mailjet</strong> Mailjet is a powerful email service provider that ensures maximum insight and deliverability results for marketing and transactional emails. Our analytics tools and intelligent APIs offer the flexibility to create, send and optimize emails for all.<br />
       Let us handle the heavy lifting of sending so that so you can focus on what matters most: innovating. Mailjet enables you to send transactional emails with peace of mind. We ensure a great deliverability for your emails and an end-to-end tracking. You can send your emails through SMTP relay or API.</p>
     </div>
@@ -43,32 +43,32 @@ description: "Situated in the beautiful British city of Bath, Bath Ruby is a con
     <h2>Silver</h2>
 
     <div class="media">
-      <%= link_to image_tag("sponsors/pusher.png", width: 300, height: 150, alt: "Pusher"), "https://pusher.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
+      <%= link_to image_tag("supporters/pusher.png", width: 300, height: 150, alt: "Pusher"), "https://pusher.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "company-logo" %>
       <p><strong>Pusher</strong> Create interactive, realtime apps in minutes with your technology stack of choice by using Pusher's hosted API. Pusher is perfect for realtime notifications, activity streams, data visualizations, collaborative apps and much more. It's secure, it scales from one to millions of connections instantly and you won't need to set up or maintain your own realtime infrastructure.</p>
     </div>
 
     <div class="media">
-      <%= link_to image_tag("sponsors/alliants.png", width: 300, height: 150, alt: "Alliants"), "http://www.alliants.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
+      <%= link_to image_tag("supporters/alliants.png", width: 300, height: 150, alt: "Alliants"), "http://www.alliants.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "company-logo" %>
       <p><strong>Alliants</strong> 6 years ago we were one developer, and now we are 38 with offices in Southampton, London and Toronto. We get excited by solving problems (sometimes with code / sometimes not). Our approach has meant we've been able to worked with start ups and global companies across a range of industries. We are excited to find our next challenge and the people who can help us solve them. Whilst a lot has changed since the beginning somethings have remained constant, Great Coffee, Great Code and our love of Bacon and Beer.</p>
     </div>
 
     <div class="media">
-      <%= link_to image_tag("sponsors/cookieshq.png", width: 300, height: 150, alt: "CookiesHQ"), "http://cookieshq.co.uk/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
+      <%= link_to image_tag("supporters/cookieshq.png", width: 300, height: 150, alt: "CookiesHQ"), "http://cookieshq.co.uk/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "company-logo" %>
       <p><strong>CookiesHQ</strong> CookiesHQ is a small but perfectly formed Ruby on Rails development agency based in Bristol. Our team of problem solvers create, maintain and improve web applications for startups, agencies and tech teams in the South West and beyond. We are experienced, honest and pragmatic, always aiming to find, not only the right solution, but the solution that will make a difference to your project and allow you to take your business to the next level. Our lovely clients have praised our technical knowledge, strong communication process and overall efficiency… and we sometimes bake cookies for them!</p>
     </div>
 
     <div class="media">
-      <%= link_to image_tag("sponsors/bugsnag.png", width: 300, height: 150, alt: "Bugsnag"), "http://bugsnag.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=bathruby2016", :class => "sponsor-logo" %>
+      <%= link_to image_tag("supporters/bugsnag.png", width: 300, height: 150, alt: "Bugsnag"), "http://bugsnag.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=bathruby2016", :class => "company-logo" %>
       <p><strong>Bugsnag</strong> Bugsnag gives Ruby developers the tools and workflow they need to spend more time shipping and less time fixing. We help you take a proactive approach to software quality, translating exceptions and errors into action. With Bugsnag, Ruby developers are free to innovate and build applications that can evolve with the pace of modern business.</p>
     </div>
 
     <div class="media">
-      <%= link_to image_tag("sponsors/bristol-and-bath.png", width: 300, height: 150, alt: "Bristol & Bath"), "https://www.bristolandbath.co.uk/?utm_source=conference_website&utm_medium=logo&utm_campaign=bathruby2016", :class => "sponsor-logo" %>
+      <%= link_to image_tag("supporters/bristol-and-bath.png", width: 300, height: 150, alt: "Bristol & Bath"), "https://www.bristolandbath.co.uk/?utm_source=conference_website&utm_medium=logo&utm_campaign=bathruby2016", :class => "company-logo" %>
       <p><strong>Bristol &amp; Bath</strong> How far could your business go if nothing was holding you back? In Bristol &amp; Bath you will find a talent pool fed by four of the UK's top universities. A network of pioneering companies like Airbus, HP Labs, Aardman and Intel. And an airport ready to transport you to hundreds of major cities around the world. How far could your business go? Come to Bristol &amp; Bath and find out.</p>
     </div>
 
     <div class="media">
-      <%= link_to image_tag("sponsors/freeagent.png", width: 300, height: 150, alt: "FreeAgent"), "http://www.freeagent.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=bathruby2016", :class => "sponsor-logo" %>
+      <%= link_to image_tag("supporters/freeagent.png", width: 300, height: 150, alt: "FreeAgent"), "http://www.freeagent.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=bathruby2016", :class => "company-logo" %>
       <p><strong>FreeAgent</strong> FreeAgent is a multi-award winning online accounting system specifically designed to meet the needs of micro-businesses and freelancers.
       <br />
       We help you take care of your business admin day-to-day – from managing your expenses, running a fully RTI-compliant payroll and tracking
@@ -80,12 +80,12 @@ description: "Situated in the beautiful British city of Bath, Bath Ruby is a con
     <h2>Bronze</h2>
 
     <div class="media">
-      <%= link_to image_tag("sponsors/rawnet.png", width: 300, height: 150, alt: "Rawnet"), "http://www.rawnet.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
+      <%= link_to image_tag("supporters/rawnet.png", width: 300, height: 150, alt: "Rawnet"), "http://www.rawnet.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "company-logo" %>
       <p><strong>Rawnet</strong> Voted Most Respected Agency in the UK by our peers, Rawnet specialise in motivational &amp; behavioural led digital engagement. We help companies innovative and stay ahead of the game through beautifully designed and coded applications. Born out of a successful Internet business, the agency works on both digital products and engagement campaigns, taking every project on with commercials and results at the heart. We are a 40 strong agency, we never outsource and have a 100% client retention rate. We've also been voted Number 1 Elite Digital Agency by The Drum and have collected over 20 awards for our fresh approach to digital in the past 2 years.</p>
     </div>
 
     <div class="media">
-      <%= link_to image_tag("sponsors/novate.jpg", width: 300, height: 150, alt: "Novate IT"), "http://www.novate-it.co.uk/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
+      <%= link_to image_tag("supporters/novate.jpg", width: 300, height: 150, alt: "Novate IT"), "http://www.novate-it.co.uk/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "company-logo" %>
       <p><strong>Novate IT</strong> Now in their 12th year, Novate IT is a recruitment company unlike any you will have experienced before; there's no hard-sell, nor is there a deluge of unsuitable vacancies or candidates. Working as a true "consultancy" rather than just an "agency", Novate IT partner with their clients to fully understand their business, they then only send small numbers of carefully selected applicants who all meet the role's requirements. If you're looking for a recruitment partner who takes time to understand your needs and strives to be a cut above the rest they could be just what you're looking for. Novate IT work with Ruby employers and applicants across the UK and Germany and are always interested in speaking with new companies and candidates.</p>
     </div>
 
