Add Epimorphics to the sponsors

--- a/source/sponsors.html.erb
+++ b/source/sponsors.html.erb
@@ -89,6 +89,12 @@ description: "Situated in the beautiful British city of Bath, Bath Ruby is a con
       <p><strong>Novate IT</strong> Now in their 12th year, Novate IT is a recruitment company unlike any you will have experienced before; there's no hard-sell, nor is there a deluge of unsuitable vacancies or candidates. Working as a true "consultancy" rather than just an "agency", Novate IT partner with their clients to fully understand their business, they then only send small numbers of carefully selected applicants who all meet the role's requirements. If you're looking for a recruitment partner who takes time to understand your needs and strives to be a cut above the rest they could be just what you're looking for. Novate IT work with Ruby employers and applicants across the UK and Germany and are always interested in speaking with new companies and candidates.</p>
     </div>
 
+    <div class="media">
+      <%= link_to image_tag("supporters/epimorphics.png", width: 300, height: 150, alt: "Epimorphics"), "http://www.epimorphics.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "company-logo" %>
+      <p><strong>Epimorphics</strong> Epimorphics is a software consultancy specialising in linked data. We work with companies and organizations in both the private and public sectors to open up data sets through APIs, web applications, and data visualisations. We publish most of the linked data on data.gov.uk, including water quality data, flood levels and public registers from the Environment Agency, and property sales statistics from Land Registry.<br />
+      Come and meet us in-person at Bath Ruby - or online at <%= link_to "www.epimorphics.com", "http://www.epimorphics.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference" %> - about opening your data, or joining us to work on crafting compelling user experiences around open data.</p>
+    </div>
+
     <h2>Become a Sponsor</h2>
     <p class="download">Download our <%= link_to "sponsorship prospectus" , "https://dl.dropboxusercontent.com/u/599955/Bath%20Ruby%20Sponsorship%20Prospectus%202016.pdf" %>.</p>
 
