Add Heroku to the sponsors

--- a/source/_sponsors.html.erb
+++ b/source/_sponsors.html.erb
@@ -36,6 +36,8 @@
 
     <%= link_to image_tag("supporters/epimorphics.png", width: 300, height: 150, alt: "Epimorphics"), "http://www.epimorphics.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "company-logo" %>
 
+    <%= link_to image_tag("supporters/heroku.png", width: 300, height: 150, alt: "Heroku"), "https://www.heroku.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "company-logo" %>
+
     <div class="cta">
       <%= link_to 'Sponsor Profiles', '/sponsors/index.html', :class => "btn outline alt" %>
       <p>Interested in <%= link_to 'becoming a sponsor', 'https://dl.dropboxusercontent.com/u/599955/Bath%20Ruby%20Sponsorship%20Prospectus%202016.pdf' %>?</p>
