--- a/source/sponsors.html.erb
+++ b/source/sponsors.html.erb
@@ -95,6 +95,11 @@ description: "Situated in the beautiful British city of Bath, Bath Ruby is a con
       Come and meet us in-person at Bath Ruby - or online at <%= link_to "www.epimorphics.com", "http://www.epimorphics.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference" %> - about opening your data, or joining us to work on crafting compelling user experiences around open data.</p>
     </div>
 
+    <div class="media">
+      <%= link_to image_tag("supporters/heroku.png", width: 300, height: 150, alt: "Heroku"), "https://www.heroku.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "company-logo" %>
+      <p><strong>Heroku</strong> Heroku, a salesforce.com company and industry pioneer in platform as a service, has enabled developers to build and run more than four million applications - all entirely in the cloud, without the need to purchase or maintain any servers or software. With support for the most popular languages, an enterprise-class database service, and an add-ons ecosystem featuring over 150 cloud application services, Heroku provides companies from startups to Fortune 500 enterprises with a faster and more effective way to create, deploy and manage apps.</p>
+    </div>
+
     <h2>Become a Sponsor</h2>
     <p class="download">Download our <%= link_to "sponsorship prospectus" , "https://dl.dropboxusercontent.com/u/599955/Bath%20Ruby%20Sponsorship%20Prospectus%202016.pdf" %>.</p>
 
